# negaboku

./: .gdformat.cfg  .gdlintrc  .gitignore  .pre-commit-config.yaml  .textlintrc-scenario.json  .textlintrc.json  AGENTS.md  CLAUDE.md  GDSCRIPT_QUALITY.md  LICENSE  README.md  TEXTLINT_GUIDE.md  gdtools.sh  package-lock.json  package.json
GodotProject/: UNITY_TO_GODOT_MAPPING.md  export_presets.cfg  icon.svg.import  project.godot  test_minimal.gd.uid
docs/: README.md  architecture-design.md  character-story-specs.md  development-scope.md  game-systems.md  implementation-guidelines.md  ui-events.md
negaboku-bevy/: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE_BEVY_GUIDELINES.md  Cargo.toml  ECS_DESIGN_PRINCIPLES.md  LLM_DEVELOPMENT_GUIDELINES.md  MIGRATION_COMPLETED.md  README.md  REVIEW_REQUEST.md  clippy.toml  deny.toml  rustfmt.toml  test_run.sh
negaboku-bevy/.github/workflows/: ci.yml
negaboku-bevy/assets/scenarios/: scene01.md  test_scene01.md
negaboku-bevy/src/: main.rs
negaboku-bevy/src/application/: command_executor.rs  mod.rs  scenario_system.rs  services.rs
negaboku-bevy/src/domain/: battle.rs  character.rs  mod.rs  relationship.rs  scenario.rs
negaboku-bevy/src/infrastructure/: asset_manager.rs  mod.rs  scenario_loader.rs
negaboku-bevy/src/presentation/: battle_ui.rs  dialogue_ui.rs  input_systems.rs  mod.rs  screen_systems.rs  systems.rs  text_systems.rs  ui_components.rs  ui_utils.rs
negaboku-bevy/tests/: asset_sanity.rs  scenario_sanity.rs
textlint-rules/: textlint-rule-character-names.js  textlint-rule-dialogue-format.js  (+1 more)
(+203 files in other folders)
